--- a/main.css
+++ b/main.css
@@ -8,6 +8,25 @@
     /* Note: backdrop-filter has minimal browser support */
 }
 
+.page-name {
+     display: flex;
+     position: center;
+     width: 100%;
+     height: 100px;
+     display:flex;
+     justify-content: center;
+     /*background: salmon;*/
+ }
+
+.page-line {
+    display: flex;
+    position: center;
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    /*background: salmon;*/
+}
+
 .menu {
     display:inline;
     float:left;
@@ -16,30 +35,57 @@
     height: 1080px;
     left: 0px;
     top: 0px;
-    background: red;
-    /*background: #F5F5F5;*/
+    /*background: red;*/
+    background: #f2f2f2;
+    margin: auto;
+    vertical-align: center;
+}
+
+.menu-li{
+    display:inline;
+    float:left;
+    /*vertical-align: center;*/
+    /*position: absolute;*/
+    width: 100%;
+    /*height: 170px;*/
+    left: 0px;
+    top: 0px;
+    /*background: red;*/
+    /*background: #f2f2f2;*/
 }
 
 .content {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     /*position: absolute;*/
     width: 100%;
     height: 1080px;
     left: 0px;
     top: 0px;
-    background: blue;
+    /*background: blue;*/
 }
 
 .account-login {
     display: inline;
     float: left;
     width: 100%;
-    height: 70px;
-    background: #000;
+    height: 100px;
+    /*background: #000;*/
 }
 
 .photo {
+    padding: 30px;
+    height: 100%;
+    /*border: 4px solid blue;*/
+    display: inline;
+    float:left;
+}
 
+.name {
+    width: 60%;
+    padding: 30px;
+    display: inline;
+    float:left;
+    /*border: 4px solid red;*/
 }
 
 span {
@@ -51,3 +97,41 @@ span {
 
     color: #575757;
 }
+
+h1 {
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 62px;
+
+    color: #575757;
+}
+
+li {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 62px;
+    list-style-type: none;
+    color: #575757;
+    text-align: center;
+    text-transform: uppercase;
+    /*border: 1px solid red;*/
+    cursor: pointer;
+}
+
+li:hover{
+    color: #6F00B2; /* Цвет текста при наведении на нее курсора мыши */
+    background: #AFAFAF; /* Цвет фона */
+}
+
+li:active{
+    color: #ffffff; /* Цвет текста при наведении на нее курсора мыши */
+    background: #6F00B2; /* Цвет фона */
+}
+
+
