--- a/main.css
+++ b/main.css
@@ -134,4 +134,37 @@ li:active{
     background: #6F00B2; /* Цвет фона */
 }
 
+table {
+    padding-top: 20px;
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    width: 1300px;
+    /*border: 1px solid #a2a2a2;*/
+    border-collapse: collapse;
+    border-spacing: 10px 20px;
+    color: #AFAFAF;
+}
 
+th, td {
+    padding: 10px 15px;
+    border: 4px solid #a2a2a2;
+    border-top: 0px;
+}
+
+table th:first-child {
+    border-left: 0px;
+}
+
+table th:last-child {
+    border-right: 0px;
+}
+
+caption {
+    padding-top: 20px;
+}
+
+table tr:nth-child(2) {
+    color: #696969;
+}
